fixing Template Linting Errors

--- a/app/templates/components/actions-bar.hbs
+++ b/app/templates/components/actions-bar.hbs
@@ -1,6 +1,6 @@
 <div class="c-actions-bar js-items-actions">
   <div
-    class="c-actions-bar__action {{if @openMoveDialog '' 'is-disabled'}}"
+    class="c-actions-bar__action {{if @openMoveDialog "" "is-disabled"}}"
     {{action (optional @openMoveDialog)}}
   >
     {{svg-jar "move" class="c-actions-bar__icon"}}
