--- a/app/templates/components/app-container.hbs
+++ b/app/templates/components/app-container.hbs
@@ -20,7 +20,7 @@
 </div>
 
 <div
-  class="l-container__main {{if this.isEditing 'is-editing'}}"
+  class="l-container__main {{if this.isEditing "is-editing"}}"
   data-test-main-section
 >
   {{yield}}
