--- a/app/templates/components/items-project.hbs
+++ b/app/templates/components/items-project.hbs
@@ -21,7 +21,7 @@
     </div>
   {{/if}}
 
-  <div class="c-item__name c-item__name--project {{if (not @item.name) 'c-item__name--placeholder'}}">
+  <div class="c-item__name c-item__name--project {{if (not @item.name) "c-item__name--placeholder"}}">
     {{if @item.name @item.name this.placeholder}}
   </div>
 
