--- a/app/templates/components/tags-filter.hbs
+++ b/app/templates/components/tags-filter.hbs
@@ -1,5 +1,5 @@
 <div
-  class="c-tags-filter__item {{if this.isAllTagsMode 'is-selected'}}"
+  class="c-tags-filter__item {{if this.isAllTagsMode "is-selected"}}"
   {{action "clearFilter"}}
   data-test-tags-filter-item="all-tags"
 >
@@ -16,7 +16,7 @@
 {{/each}}
 
 <div
-  class="c-tags-filter__item {{if this.isNoTagMode 'is-selected'}}"
+  class="c-tags-filter__item {{if this.isNoTagMode "is-selected"}}"
   {{action "enableNoTagMode"}}
   data-test-tags-filter-item="no-tags"
 >
