--- a/app/templates/components/task-form.hbs
+++ b/app/templates/components/task-form.hbs
@@ -1,6 +1,6 @@
 <div class="c-item__line c-item__line--form">
   <div
-    class="c-checkbox js-checkbox {{if this.isProcessed 'is-checked'}}"
+    class="c-checkbox js-checkbox {{if this.isProcessed "is-checked"}}"
     {{action "toggleCheckbox"}}
   >
     {{#if this.isCompleted}}
