--- a/app/templates/components/move-options.hbs
+++ b/app/templates/components/move-options.hbs
@@ -15,12 +15,12 @@
     <div class="c-options__text">No project</div>
   </div>
 
-  {{#each (sort-by 'order' (filter-by "isActive" true this.data.projects)) as |project|}}
+  {{#each (sort-by "order" (filter-by "isActive" true this.data.projects)) as |project|}}
     <div class="c-options__item" {{action @moveToProject project}}>
       {{progress-pie class="c-icon c-icon--project c-icon--18" progress=project.progress}}
 
       <div class="c-options__text">
-        {{or project.name 'New project'}}
+        {{or project.name "New project"}}
       </div>
     </div>
   {{/each}}
