--- a/app/templates/components/progress-pie.hbs
+++ b/app/templates/components/progress-pie.hbs
@@ -1,4 +1,4 @@
-<svg class="c-progress-pie {{if isZero 'is-zero'}}" viewBox="0 0 24 24" >
+<svg class="c-progress-pie {{if isZero "is-zero"}}" viewBox="0 0 24 24" >
   <circle
     class="c-progress-pie__circle"
     r="4"
@@ -18,6 +18,6 @@
     stroke-width="2"
     stroke="currentColor"
     fill="none"
-    stroke-dasharray="{{if @isDashedBorder '4' '0'}}"
+    stroke-dasharray={{if @isDashedBorder "4" "0"}}
   />
 </svg>
