--- a/app/templates/components/sidebar-nav.hbs
+++ b/app/templates/components/sidebar-nav.hbs
@@ -78,7 +78,7 @@
 
 {{#sortable-group class="c-sidebar-nav__section" onChange=@reorderItems as |group|}}
   {{#animated-container}}
-    {{#animated-each (sort-by 'order' (filter-by "isActive" true this.data.projects)) use=eachTransition duration=200 as |project|}}
+    {{#animated-each (sort-by "order" (filter-by "isActive" true this.data.projects)) use=eachTransition duration=200 as |project|}}
       {{#sortable-item
         model=project
         group=group
@@ -89,7 +89,7 @@
             {{progress-pie class="c-icon c-icon--project c-icon--18" progress=project.progress}}
 
             <div class="c-sidebar-nav__text">
-              {{or project.name 'New project'}}
+              {{or project.name "New project"}}
             </div>
           </div>
         {{/link-to}}
