--- a/app/templates/components/subtasks-list.hbs
+++ b/app/templates/components/subtasks-list.hbs
@@ -33,6 +33,6 @@
     placeholder="New Subtask"
     value=this.newItemName
     update=(action (mut this.newItemName))
-    enter=(queue (action "createItem" this.newItemName) (action (mut this.newItemName) ''))
+    enter=(queue (action "createItem" this.newItemName) (action (mut this.newItemName) ""))
   }}
 </div>
