--- a/app/templates/components/deadline-options.hbs
+++ b/app/templates/components/deadline-options.hbs
@@ -11,6 +11,6 @@
 
 <div class="c-options__section">
   <div class="c-options__action" {{action @setDeadline null}}>
-    Remove deadline
+    {{t "deadline-options.c-options.text"}}
   </div>
 </div>
