--- a/app/templates/components/shortcuts-dialog.hbs
+++ b/app/templates/components/shortcuts-dialog.hbs
@@ -5,12 +5,12 @@
         <div class="c-fs-dialog__buttons-wrap"></div>
 
         <div class="c-fs-dialog__title">
-          Keyboard shortcuts
+          {{t "shortcuts-dialog.keyboard_shortcuts"}}
         </div>
 
         <div class="c-fs-dialog__buttons-wrap">
           <button class="c-fs-dialog__close" {{action @close}}>
-            Close
+            {{t "shortcuts-dialog.close"}}
           </button>
         </div>
       </div>
@@ -18,27 +18,27 @@
       <div class="c-shortcuts">
         <div class="c-shortcuts__section">
           <div class="c-shortcuts__title">
-            Global
+            {{t "shortcuts-dialog.global"}}
           </div>
 
           <div class="c-shortcuts__list">
             <div class="c-shortcuts__column">
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Create a new to-do
+                  {{t "shortcuts-dialog.create"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">N</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.n"}}</kbd>
                 </div>
               </div>
             </div>
             <div class="c-shortcuts__column">
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Keyboard shortcuts
+                  {{t "shortcuts-dialog.keyboard_shortcuts"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">?</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.?"}}</kbd>
                 </div>
               </div>
             </div>
@@ -47,26 +47,26 @@
 
         <div class="c-shortcuts__section">
           <div class="c-shortcuts__title">
-            Items list
+            {{t "shortcuts-dialog.items_list"}}
           </div>
 
           <div class="c-shortcuts__list">
             <div class="c-shortcuts__column">
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Edit selected item
+                  {{t "shortcuts-dialog.edit_selected"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">Enter</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.enter"}}</kbd>
                 </div>
               </div>
 
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Delete selected items
+                  {{t "shortcuts-dialog.delete_selected"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">Delete</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.delete"}}</kbd>
                 </div>
               </div>
             </div>
@@ -74,39 +74,39 @@
             <div class="c-shortcuts__column">
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Select item above
+                  {{t "shortcuts-dialog.select_above"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">▲</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.up"}}</kbd>
                 </div>
               </div>
 
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Select item below
+                  {{t "shortcuts-dialog.select_below"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">▼</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.down"}}</kbd>
                 </div>
               </div>
 
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Extend selection upwards
+                  {{t "shortcuts-dialog.extend_upwards"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">⇧ Shift</kbd>
-                  <kbd class="c-shortcuts__key">▲</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.shift"}}</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.up"}}</kbd>
                 </div>
               </div>
 
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Extend selection downwards
+                  {{t "shortcuts-dialog.extend_downwards"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">⇧ Shift</kbd>
-                  <kbd class="c-shortcuts__key">▼</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.shift"}}</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.down"}}</kbd>
                 </div>
               </div>
             </div>
@@ -115,17 +115,17 @@
 
         <div class="c-shortcuts__section">
           <div class="c-shortcuts__title">
-            Editing item
+            {{t "shortcuts-dialog.edit"}}
           </div>
 
           <div class="c-shortcuts__list">
             <div class="c-shortcuts__column">
               <div class="c-shortcuts__item">
                 <div class="c-shortcuts__info">
-                  Save and close
+                  {{t "shortcuts-dialog.save_close"}}
                 </div>
                 <div class="c-shortcuts__keys">
-                  <kbd class="c-shortcuts__key">Esc</kbd>
+                  <kbd class="c-shortcuts__key">{{t "shortcuts-dialog.c-shortcuts-key.esc"}}</kbd>
                 </div>
               </div>
             </div>
