--- a/app/templates/components/tags-field.hbs
+++ b/app/templates/components/tags-field.hbs
@@ -28,7 +28,7 @@
     class="c-tags-field__input js-input"
     data-ebd-id=(concat dropdown.uniqueId "-trigger")
     value=this.rawInput
-    placeholder="Add Tags"
+    placeholder=(t "tags-field.c-tags-field.placeholder")
     update=(action "onInputValueChanged")
     enter=(action "onInputEnter")
     escape-press=(action "onInputEscape")
