--- a/app/templates/components/tags-filter.hbs
+++ b/app/templates/components/tags-filter.hbs
@@ -3,7 +3,7 @@
   {{action "clearFilter"}}
   data-test-tags-filter-item="all-tags"
 >
-  All
+  {{t "tags-filter.c-tags-filter-item.all"}}
 </div>
 
 {{#each @tags as |tag|}}
@@ -20,5 +20,5 @@
   {{action "enableNoTagMode"}}
   data-test-tags-filter-item="no-tags"
 >
-  No Tag
+  {{t "tags-filter.c-tags-filter-item.no_tag"}}
 </div>
