--- a/app/templates/components/when-options.hbs
+++ b/app/templates/components/when-options.hbs
@@ -4,7 +4,7 @@
       {{svg-jar when class=(concat "c-icon c-icon--18 c-icon--" when)}}
 
       <div class="c-options__text">
-        {{when}}
+        {{t (concat "when-options." when)}}
       </div>
     </div>
   {{/each}}
