--- a/app/templates/components/list-placeholder.hbs
+++ b/app/templates/components/list-placeholder.hbs
@@ -6,13 +6,13 @@
   {{#if (and (not-eq @folder "upcoming") (not-eq @folder "logbook") (not-eq @folder "trash"))}}
     <div class="c-placeholder__tips">
       <div class="c-placeholder__tips-item">
-        <div class="c-placeholder__tips-text">Show all shortcuts</div>
+        <div class="c-placeholder__tips-text">{{t "list-placeholder.c-placeholder-tips.show_all" }}</div>
         <div class="c-placeholder__tips-key">?</div>
       </div>
 
       <div class="c-placeholder__tips-item">
-        <div class="c-placeholder__tips-text">Create a new to-do</div>
-        <div class="c-placeholder__tips-key">N</div>
+        <div class="c-placeholder__tips-text">{{t "list-placeholder.c-placeholder-tips.create" }}</div>
+        <div class="c-placeholder__tips-key">{{t "list-placeholder.c-placeholder-tips.n" }}</div>
       </div>
     </div>
   {{/if}}
